--- a/server/client/stylus/global.styl
+++ b/server/client/stylus/global.styl
@@ -5,9 +5,10 @@
 //resets
 @import 'base/elements/index'
 
-// Componenets
+// Components
 @import 'base/components/queries'
 @import 'base/components/event_form'
+@import 'base/components/details-car'
 @import 'base/components/checkin_form'
 @import 'base/components/events'
 @import 'base/components/header'
