--- a/server/client/stylus/base/components/checkin_form.styl
+++ b/server/client/stylus/base/components/checkin_form.styl
@@ -1,5 +1,5 @@
 /*=================================
-========== search form ===========
+========== form ===========
 =================================*/
 
 .c-title
@@ -10,7 +10,7 @@
 
 .c-form-search
 	display: flex
-	justify-content: space-around
+	justify-content: center
 	align-items: center
 	margin: 2rem 0
 form p
@@ -32,10 +32,14 @@ input
 	&:focus
 		border: 3px solid #33ff99
 		box-shadow: 0 0 5px 5px rgba(#33ff99,.4)
+	&:visited
+		border 3px solid #e03333
+		box-shadow: 0 0 5px 5px rgba(#ff0000,.4)
 
 .c-form-plate
 	width: 30rem
 	padding: 1rem
+	margin-right: 1rem
 	text-align: center
 	font-size: $text-size.large-2
 	text-transform: uppercase
@@ -47,23 +51,17 @@ button.c-form-submit
 	border: .4rem solid #39FF9A
 	background-color: #222a2e
 	color: $base-color
-	font-weight: 700
+	font-weight: 500
 	font-size: $text-size.normal-3
-	padding: 1rem
-	width: 50%
+	padding: 1.5rem 4rem
+	& i
+		vertical-align: middle
+		color: $base-text-color-bold
 .center
 	margin: 0 auto
 
 /*=================================
-======= end search form ==========
-=================================*/
-
-/*=================================
-======= checkin form ==========
-=================================*/
-
-/*=================================
-======= end checkin form ==========
+======= end form ==========
 =================================*/
 //
 // .c-form__input
