--- a/server/client/stylus/base/components/checkin_form.styl
+++ b/server/client/stylus/base/components/checkin_form.styl
@@ -16,12 +16,12 @@
 form p
 	font-size: $text-size.normal-3
 	color: $base-color
-	font-weight $semi-bold
+	font-weight $normal
 	margin-bottom: 0
 
 input
 	font-size: $text-size.normal-2
-	width: 60rem
+	width: 100%
 	border-radius: 5px
 	background-color: $base-color-light
 	border: 3px solid #000000
@@ -45,7 +45,7 @@ input
 	text-transform: uppercase
 	color: $base2-color
 
-button.c-form-submit
+button.c-form-submit, .c-form-submit-litle
 	display: block
 	border-radius: 10px
 	border: .4rem solid #39FF9A
@@ -60,76 +60,25 @@ button.c-form-submit
 .center
 	margin: 0 auto
 
+.c-title-form
+	color: $base-color-light
+	font-size: $text-size.normal-3
+	padding: 2rem 0 0
+	text-align: center
+	line-height: normal
+	.h2
+		margin-bottom: 1rem
+	p
+		color #33ff99
+		font-weight: 500
+		font-size: $text-size.normal
+.c-form-submit-litle
+	padding: 1rem 2rem
+	margin: 1rem auto
+
+.c-form-password
+	display: flex
+
 /*=================================
 ======= end form ==========
 =================================*/
-//
-// .c-form__input
-// 	color: black
-//
-// .c-form-personal, .c-form-code, .c-form-login
-// 	margin-bottom: 4rem
-// 	padding: 0 5rem
-// 	& p
-// 		font-size: 2rem
-// 		line-height: 1.1
-// 		padding: 2rem 0 1rem
-// 		color: $base-color
-// 		font-weight $semi-bold
-// 	& a
-// 		width: max-content
-// 		border: .4rem solid #39A0FF
-//
-// .c-form-password
-// 	display: flex
-// 	align-items: center
-//
-// input, textarea, select
-// 	font-size: $text-size.normal-3
-// 	width: 100%
-// 	border-radius: 5px
-// 	background-color: $base-color-light
-// 	border: 3px solid #000000
-// 	transition: .7s ease
-// 	&:focus
-// 		border: 3px solid #33ff99
-// 		box-shadow: 0 0 5px 5px rgba(#33ff99,.4)
-// 	&:invalid
-// 		border 3px solid #e03333
-// 		box-shadow: 0 0 5px 5px rgba(#ff0000,.4)
-//
-// .c-title-form
-// 	color: $base-color-light
-// 	font-size: $text-size.normal-3
-// 	padding: 2rem 4rem 0
-// 	p
-// 		font-size $text-size.normal-2
-// 		padding 1rem 3.5rem
-// 		color #33ff99
-//
-// .c-message
-// 	padding .8rem 1.5rem
-// 	border 3px solid #b548ff
-// 	border-radius 10px
-// 	box-shadow: 0 0 5px 3px rgba(#b548ff,.3)
-//
-//
-// .showPass
-// 	background: #222a2e
-// 	border-radius: 5px
-// 	border: 2px solid $base-color
-// 	height: min-content
-// 	& i
-// 		font-size: 2rem
-// 		color: $base-color
-// 		vertical-align: middle
-//
-// .c-form-submit
-// 	padding: 1rem 2rem
-// 	border-radius: 10px
-// 	border: .4rem solid #39FF9A
-// 	display: block
-// 	margin: 0 auto 2rem
-// 	background-color: #222a2e
-// 	color: $base-color
-// 	font-weight: 700
