--- a/server/client/stylus/base/components/details-car.styl
+++ b/server/client/stylus/base/components/details-car.styl
@@ -64,7 +64,12 @@ ul.c-header__panel
 		border: solid 2px #9039FF
 		border-radius: 10px
 		font-size: $text-size.normal
-
+.c-capacity
+	padding: 2rem
+	.h1
+		text-align: center
+.number
+	color: #39FF9A
 /*=================================
 ============== ^End Index ==========
 =================================*/
