--- a/server/client/stylus/global.styl
+++ b/server/client/stylus/global.styl
@@ -12,3 +12,4 @@
 @import 'base/components/checkin_form'
 @import 'base/components/events'
 @import 'base/components/header'
+@import 'base/components/messagesAndErrors'
