--- a/server/client/views/index.pug
+++ b/server/client/views/index.pug
@@ -16,3 +16,6 @@ block container
 				.p= i+1
 				.p= item.plate
 				.p= item.timeCheckIn
+	.c-capacity
+		.h1 Espacios displonibles dentro del parqueo: 
+			span.number=carsInside
