--- a/server/client/stylus/base/components/event_form.styl
+++ b/server/client/stylus/base/components/event_form.styl
@@ -2,8 +2,11 @@
 	font-size: $text-size.normal-2
 	color: #3c3c3c
 	padding: 0 2rem
-	line-height: 4rem
-
+	line-height: 3rem
+	max-width: 70rem
+	p
+		margin-bottom: 1rem
+		margin-top: 1rem
 .c-form__group
 	margin: 0 0 2rem
 	& button
